--- a/styles/style.css
+++ b/styles/style.css
@@ -822,7 +822,7 @@ footer a {
       position: absolute;
       top: 5px;
       right: 25%;
-      padding: 20px;
+      padding: 25px;
       border-bottom:0;
       width: 0px;
     }
@@ -944,8 +944,8 @@ footer a {
   }
 }
 
-/* Small devices (phones, 300px to 400px) */
-@media (min-width: 300px) and (max-width: 400px) {
+/* Small devices (phones, under 400px) */
+@media (max-width: 400px) {
 
   /* Header */
   .topbar {
@@ -999,7 +999,7 @@ footer a {
     position: absolute;
     top: 5px;
     right: 25%;
-    padding: 20px;
+    padding: 25px;
     border-bottom:0;
     width: 0px;
   }
