--- a/styles/style.css
+++ b/styles/style.css
@@ -176,12 +176,13 @@ a:visited {
 }
 
 .form_recherche i {
-  position: relative;
   font-size: 18px;
-
-  height: 40px;
-  margin-left: 16px;
-  margin-right: 14px;
+  width: 40px;
+  height: 20px;
+  margin: 0;
+  background-color: #f2f2f2;
+  padding: 10px 0px 10px 0px;
+  text-align: center;
 }
 
 .input_recherche {
@@ -1060,19 +1061,16 @@ footer a {
 
   .form_recherche i {
     font-size: 18px;
-    height: 40px;
-    margin-left: 2%;
-    margin-right: 1%;
   }
 
   .form_recherche input {
-    width: 66%;
+    width: 60%;
     padding: 10px 0 10px 4%;
     font-size: 14px;
   }
 
   .form_recherche button {
-    width: 20%;
+    width: 15%;
     border-radius: 10px;
   }
 
