--- a/styles/style.css
+++ b/styles/style.css
@@ -396,6 +396,7 @@ h4 {
 }
 
 .heb_carte {
+  width: 100%;
   height: 200px;
   background-color: white;
   border-radius: 15px;
@@ -531,6 +532,10 @@ h4 {
   grid-template-columns: repeat(4, minmax(100px, 25%));
   padding: 20px 1% 10px 0px;
   justify-items: center;
+}
+
+.act_image{
+  width: 100%;
 }
 
 .image_2_hauteur,
@@ -787,7 +792,7 @@ footer a {
 }
 
 /* Small devices (landscape phones, 400px to 750px) */
-@media (min-width: 400px) and (max-width: 750px) {
+@media (min-width: 540px) and (max-width: 750px) {
   /* Header */
   .topbar {
     flex-wrap: wrap;
@@ -890,9 +895,10 @@ footer a {
   }
 
   .heb_grille {
-    grid-gap: 2% 0%;
-    grid-template-columns: repeat(1, minmax(100px, 100%));
+    grid-gap: 2% 2%;
+    grid-template-columns: repeat(2, minmax(100px, 50%));
   }
+
 
   .heb_carte {
     box-shadow: 0 3px 10px 1px #7e7e7e;
@@ -912,7 +918,7 @@ footer a {
   }
 
   .affiche_plus {
-    margin-top: 150px;
+    margin-top: 65px;
   }
 
   .populaire {
@@ -980,8 +986,8 @@ footer a {
   }
 }
 
-/* Small devices (phones, under 400px) */
-@media (max-width: 400px) {
+/* Small devices (phones, under 540px) */
+@media (max-width: 540px) {
   /* Header */
   .topbar {
     flex-wrap: wrap;
